tests/compile-fail/Rule_21_1.rs
#![deny(clippy)]
#[deny(warnings)]

macro_rules! println {
   () => (3;);
}

fn main() {
    println!();
}
